# MindBuddy

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  conftest.py  docker-compose.yml  pyproject.toml
benchmarks/: benchmark_results.txt  cluster_stress_test.py  multi_round_stress_test.py  performance_benchmark.py  release_readiness.py  release_readiness_results.json  release_readiness_results.md  runtime_profile_eval.py  runtime_profile_eval_results.json  runtime_profile_eval_results.md
docs/: ADVANCED_IMPROVEMENT_PLAN.md  CODE_WIKI.md  INTEGRATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PAPER_PLAN.md  SUBMODULE_SYNC.md  USAGE_GUIDE.md  memory_theory.md
mindbuddy/: __init__.py  __main__.py  adaptive_pid_tuner.py  agent_intelligence.py  agent_loop.py  agent_metrics.py  agent_protocol.py  agent_reflection.py  agent_router.py  anthropic_adapter.py  api_retry.py  auto_mode.py  background_tasks.py  capability_registry.py  cli_commands.py  config.py  context_compactor.py  context_cybernetics.py  context_isolation.py  context_manager.py  cost_control.py  cost_tracker.py  cron_runner.py  cybernetic_ablation.py  cybernetic_orchestrator.py  cybernetic_supervisor.py  decision_audit.py  decoupling_controller.py  domain_classifier.py  feedback_controller.py  feedforward_controller.py  file_review.py  gateway.py  headless.py  history.py  hooks.py  install.py  intent_parser.py  layered_context.py  local_tool_shortcuts.py  (+45 more)
tests/: test_advanced_cybernetics.py  test_agent_flow.py  test_agent_intelligence.py  test_agent_loop.py  test_agent_stress.py  test_anthropic_adapter.py  test_cli_commands.py  test_cluster_stress.py  test_config.py  test_context_compactor.py  test_context_cybernetics.py  test_cost_control.py  test_cybernetic_ablation.py  test_cybernetic_orchestrator.py  test_cybernetic_supervisor.py  test_cybernetics_concurrency.py  test_cybernetics_e2e.py  test_domain_memory.py  test_feedback_controller.py  test_feedforward_controller.py  test_functional_completeness.py  test_headless.py  test_helpers.py  test_integration.py  test_main.py  test_mcp.py  test_memory_benchmark.py  test_memory_curator.py  test_memory_e2e.py  test_memory_integration.py  test_memory_reranker.py  test_memory_stress.py  test_mock_model.py  test_model_selection_controller.py  test_new_features.py  test_packaging.py  test_permissions.py  test_prompt.py  (+16 more)
(+70 files in other folders)
