[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindbuddy"
version = "0.1.0"
description = "A lightweight terminal coding assistant for local development workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
mindbuddy = "mindbuddy.main:main"
mindbuddy-gateway = "mindbuddy.gateway:run_gateway"
mindbuddy-cron = "mindbuddy.cron_runner:main"
mindbuddy-headless = "mindbuddy.headless:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
